Use Java 8 compatible method.